--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -3,9 +3,11 @@
     text-align: center;
 }
 
-.img {
-    width: 500px;
-    height: 400px;
-    display: block;
-    margin: 0 auto;
+.background{
+    background-image: url("../../assets/images/capaHome1.png");
+    background-repeat: no-repeat;
+    width: 90vh;
+    min-height: 80vh;
+    background-size: 90%;
+    background-position: right;
 }
