add login e cadastro

--- a/src/components/estaticos/navbar/Navbar.css
+++ b/src/components/estaticos/navbar/Navbar.css
@@ -2,11 +2,16 @@
     justify-content: space-around;
 }
 
-.menu {
-    background-color: #FFE6DB;
-}
 
 .texto {
     color: #D92B4B;
-    
+}
+
+.text-decorator-none {
+    text-decoration: none;
+}
+
+.cursor {
+    cursor: pointer;
+    color: white;
 }
