--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     width: 90vh;
     min-height: 100vh;
-    background-size: 100%;
+    background-size: contain;
     background-position: right;
 }
 
@@ -27,6 +27,6 @@
 }
 
 .postagens {
-    background-color: white !important;
+    background-color: #FFE6DB !important;
 }
 
